DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
May-08-2007 aronb       Simplify the cluster archetecture and use ::create()
                        factory methods.
                        NEW VERSION: 1.3.7
May-01-2007 aronb       Start using shared_ptrs for gadget::Node and cluster::Packet.
                        NEW VERSION: 1.3.6
May-01-2007 aronb       Start using shared_ptrs for Proxy and derived classes.
                        NEW VERSION: 1.3.5
May-01-2007 aronb       Start using shared_ptrs for Input, Digital, Analog, Position, etc.
                        NEW VERSION: 1.3.4
Apr-30-2007 aronb       Started revamping the cluster infastructure.
                        NEW VERSION: 1.3.3
Apr-29-2007 patrick     Renamed the x11_pipes property of the display_system
                        config element to pipes.
                        NEW VERSION: 1.3.2
Apr-28-2007 patrick     Changed clustering to be single-threaded.
                        NEW VERSION: 1.3.1
Apr-18-2007 patrick     VR Juggler 2.2 branch created.
                        NEW VERSION: 1.3.0