@@ -34,10 +34,10 @@
 
 #include <drivers/Fakespace/PinchGlove/PinchGloveStandalone.h>
 
-#include <gadget/Type/Digital.h>
+#include <gadget/Type/InputBaseTypes.h>
 #include <gadget/Type/Input.h>
-#include <gadget/Type/InputMixer.h>
 #include <gadget/Type/Glove.h>
+#include <gadget/Type/Digital.h>
 
 namespace gadget
 {
@@ -45,7 +45,8 @@ namespace gadget
 /**
  * Fakespace PinchGlove device.
  */
-class PinchGlove : public InputMixer<InputMixer<Input, Glove>, Digital>
+class PinchGlove
+   : public input_glove_digital_t
 {
 public:
    /**
