@@ -29,11 +29,10 @@
 
 #include <gadget/Devices/DriverConfig.h>
 #include <vector>
+#include <gadget/Type/InputBaseTypes.h>
 #include <gadget/Type/Input.h>
 #include <gadget/Type/Digital.h>
 #include <gadget/Type/Analog.h>
-#include <gadget/Devices/Sim/SimInput.h>
-#include <gadget/Type/InputMixer.h>
 
 #define TRACKD_DLL_EXPORTS 0
 #include GADGET_TRACKD_API_H
@@ -54,7 +53,8 @@ namespace gadget
  * @see gadget::Digital
  * @see gadget::Analog
  */
-class TrackdAPIController : public InputMixer<InputMixer<Input,Digital>,Analog>
+class TrackdAPIController
+   : public input_digital_analog_t
 {
 public:
 
