@@ -1,13 +1,21 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Jun-15-2007 aronb       Introduced typedefs for known gadget::InputMixer<>
+                        instantiations to be used as the base class for device
+                        drivers.
+                        NEW VERSION: 1.3.8
+Jun-15-2007 aronb       Fixed the VRPN driver so that it works correctly in a
+                        cluster configuration again.
 May-08-2007 aronb       Simplify the cluster archetecture and use ::create()
                         factory methods.
                         NEW VERSION: 1.3.7
-May-01-2007 aronb       Start using shared_ptrs for gadget::Node and cluster::Packet.
+May-01-2007 aronb       Start using shared_ptrs for gadget::Node and
+                        cluster::Packet.
                         NEW VERSION: 1.3.6
 May-01-2007 aronb       Start using shared_ptrs for Proxy and derived classes.
                         NEW VERSION: 1.3.5
-May-01-2007 aronb       Start using shared_ptrs for Input, Digital, Analog, Position, etc.
+May-01-2007 aronb       Start using shared_ptrs for Input, Digital, Analog,
+                        Position, etc.
                         NEW VERSION: 1.3.4
 Apr-30-2007 aronb       Started revamping the cluster infastructure.
                         NEW VERSION: 1.3.3
